tests/interpreter_tests/throw.test
################################################################################
#    Copyright (c) 2012, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=throw
INTERPRETER_TESTS_DIR=${JS_HOME}/tests/interpreter_tests
interpret
interpret_out_WCIequals=\
Throw(TypeError) @ ${JS_HOME}/tests/interpreter_tests/throw.js:3:1-4:1\n
interpret_err_equals=
