tests/interpreter_tests/throw.js
3
"test"
throw TypeError
true
null
